<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:paddingHorizontal="8dp"
    tools:context=".ui.activity.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/rlHomeHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/main_acitivity_app_name"
                android:textColor="@color/grey"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.506" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="-50dp"
                android:alpha=".10"
                android:contentDescription="@string/app_logo_content_description"
                android:src="@drawable/pokeball"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/labelFilterTypeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Search filter by:"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHomeHeader" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rgFilterActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelFilterTypeActivity">

        <RadioButton
            android:id="@+id/radio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/type_filter_name"
            android:textColor="@color/grey" />

        <RadioButton
            android:id="@+id/radio_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/type_filter_type"
            android:textColor="@color/grey" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_search"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"

        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/label_search"
        android:textColor="@color/grey"
        android:textColorHint="@color/greyAlpha"
        android:textCursorDrawable="@color/black"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgFilterActivity"
        app:startIconDrawable="@android:drawable/ic_menu_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_bold"
            android:maxLength="40"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_list_pokemon_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:spanCount="2"
        tools:listitem="@layout/item_card_pokemon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_random_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:contentDescription="@string/fab_main_content_descritpion"
        android:focusable="true"
        android:src="@drawable/pokeball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pb_load_pokemons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/activity_list_pokemon_recyclerview"
        app:layout_constraintEnd_toEndOf="@+id/activity_list_pokemon_recyclerview"
        app:layout_constraintStart_toStartOf="@+id/activity_list_pokemon_recyclerview"
        app:layout_constraintTop_toTopOf="@+id/activity_list_pokemon_recyclerview"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>